last_execution.log
ESP32/hal.cpp: In function 'void onTickTimer()':
ESP32/hal.cpp:26:5: warning: '++' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
   26 |     ticks++;
      |     ^~~~~
ESP32/hal.cpp: In function 'void hal_CC_GDO_init(uint8_t, uint8_t)':
ESP32/hal.cpp:137:54: error: 'gdo_interrupt_handler' was not declared in this scope
  137 |     attachInterrupt(digitalPinToInterrupt(GDO0_PIN), gdo_interrupt_handler, CHANGE);
      |                                                      ^~~~~~~~~~~~~~~~~~~~~
ESP32/hal.cpp: In function 'void gdo_interrupt_handler()':
ESP32/hal.cpp:141:5: warning: '++' expression of 'volatile'-qualified type is deprecated [-Wvolatile]
  141 |     gdo_isr_count++;
